--- a/traingogo1/inde.html
+++ b/traingogo1/inde.html
@@ -13,6 +13,7 @@
     <div class="123"></div>
     <h1 class="h1"></h1>
     <h1 class="h1">8:22</h1>
+    <h1 class="h1">10:26</h1>
 </body>
 
 </html>
