--- a/traingogo1/inde.html
+++ b/traingogo1/inde.html
@@ -14,6 +14,7 @@
     <h1 class="h1"></h1>
     <h1 class="h1">8:22</h1>
     <h1 class="h1">10:26</h1>
+    <h1 class="h1">check out c1</h1>
 </body>
 
 </html>
