--- a/traingogo1/sweetshop1.html
+++ b/traingogo1/sweetshop1.html
@@ -15,18 +15,22 @@
     <header class="header df fdc ma">
         <div class="header-logonavcontainer df jcsb ">
             <div class="header-imgcontainer">
-                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-sm-dark.svg" alt="" class="-dn mlogo-img" />
-                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg" alt="" class="pclogo-img" />
+                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-sm-dark.svg"
+                    alt="" class="-dn mlogo-img" />
+                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg"
+                    alt="" class="pclogo-img" />
             </div>
             <nav class="header-navcontainer df">
                 <span class="h6 swg fwb">首頁</span>
                 <span class="h6 swg fwb">甜點</span>
                 <span class="h6 swg fwb">登入</span>
-                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/dehaze-24px.png" alt="" class="-dn nav-dehaze">
+                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/dehaze-24px.png"
+                    alt="" class="-dn nav-dehaze">
 
             </nav>
         </div>
-        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/shopping_cart.png" alt="" class="shopcart-img">
+        <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/shopping_cart.png"
+            alt="" class="shopcart-img">
     </header>
 
     <div class="banner ma">
@@ -60,6 +64,84 @@
             </div>
         </div>
     </aside>
+
+    <div class="shopcontent df fdc">
+        <div class="container1 shopcontainer df fdr jcsa fww">
+            <img src="https://bit.ly/2xPn7Eq" alt=" " class="content-img">
+            <img src="img/whymakem.svg" alt=" " class="content-imgm -dn">
+            <div class="contain-text">
+                <p>青山依舊在，幾度夕陽紅。慣看秋月春風。</p>
+                <p>一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                <br>
+                <br>
+                <p>是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+            </div>
+            <img src="img/whymake.svg" alt="" class="contenttext-img">
+        </div>
+
+        <div class="container2 shopcontainer df fdr jcsa fww">
+            <img src="https://bit.ly/2zzAQS4" alt=" " class="content-img">
+            <img src="img/whyeatm.svg" alt=" " class="content-imgm -dn">
+
+            <div class="contain-text">
+                <p>青山依舊在，幾度夕陽紅。慣看秋月春風。</p>
+                <p>一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+                <br>
+                <p>是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。</p>
+            </div>
+            <img src="img/whymake.svg" alt="" class="contenttext-img">
+        </div>
+
+        <div class="container3 df jcc aic">
+            <img src="img/wanttoeatnoreson.svg" alt="" class="container3-imgm -dn">
+            <img src="img/noreson.svg" alt="" class="container3-img">
+        </div>
+    </div>
+
+    <div class="shopcard df fdr jcsb ">
+        <div class="card-wrap df fdr jcsb">
+            <div class="card-container df fdc b ">
+                <p class="dayly h6 df jcc aic">本日精選</p>
+                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/favorite_border.png"
+                    alt="favoe-heart" class="heart">
+                <img src="https://bit.ly/2zBjQuq" alt="cardimg" class="cardimg">
+                <div class="cardtext ">
+                    <span>焦糖馬卡龍</span>
+                    <span>NT$ 450</span>
+                </div>
+                <div class="addcart">
+                    <p class="h3">加入購物車</p>
+                </div>
+            </div>
+            <div class="card-container df fdc b ">
+                <p class="dayly h6 df jcc aic">本日精選</p>
+                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/favorite_border.png"
+                    alt="favoe-heart" class="heart">
+                <img src="https://bit.ly/2zBjQuq" alt="cardimg" class="cardimg">
+                <div class="cardtext ">
+                    <span>焦糖馬卡龍</span>
+                    <span>NT$ 450</span>
+                </div>
+                <div class="addcart">
+                    <p class="h3">加入購物車</p>
+                </div>
+            </div>
+            <div class="card-container df fdc b">
+                <p class="dayly h6 df jcc aic">本日精選</p>
+                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/favorite_border.png"
+                    alt="favoe-heart" class="heart">
+                <img src="https://bit.ly/2zBjQuq" alt="cardimg" class="cardimg">
+                <div class="cardtext ">
+                    <span>焦糖馬卡龍</span>
+                    <span>NT$ 450</span>
+                </div>
+                <div class="addcart">
+                    <p class="h3">加入購物車</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
 </body>
