--- a/traingogo1/sweeshop5.html
+++ b/traingogo1/sweeshop5.html
@@ -34,7 +34,7 @@
 
     <div class="check-wrap df fdr fww jcsb">
         <div class="diliver-contain">
-            <div class="diliver-title df fdr jcsa">
+            <div class="diliver-title df fdr jcsb">
                 <h1 class="h2">運送
                 </h1>
                 <ul class="diliver-circle ">
@@ -46,21 +46,21 @@
             <form action="" class="diliver-form">
                 <label for="">姓氏</label>
                 <label for="">名字</label>
-                <input type="text" placeholder="王">
+                <input type="text" placeholder="王" class="d-firstname">
 
-                <input type="text" placeholder="小明">
+                <input type="text" placeholder="小明" class="d-name">
                 <label for="">電話</label>
-                <input type="tel" placeholder="0912-345-678">
-                <label for="">地址</label>
-                <select name="'城市" id="city">
+                <input type="tel" placeholder="0912-345-678" class="d-tel">
+                <label for="" class="d-place">地址</label>
+                <select name="'城市" id="city" class="d-city">
                   <option value="高雄市">高雄市</option>
                   <option value="台中市">台中市</option>
                   <option value="台北市">台北市</option>
                 </select>
-                <select name="" id=" ">
+                <select name="" id=" " class="d-road">
           <option value="新興區">新興區</option>
         </select>
-                <input type="text" placeholder="幸福路 520 號">
+                <input type="text" placeholder="幸福路 520 號" class="d-side">
             </form>
         </div>
         <div class="info-contain df fdc">
