--- a/traingogo1/sweeshop5.html
+++ b/traingogo1/sweeshop5.html
@@ -17,22 +17,26 @@
         <header class="header df fdc ma">
             <div class="header-logonavcontainer df jcsb ">
                 <div class="header-imgcontainer">
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-sm-dark.svg" alt="" class="-dn mlogo-img" />
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg" alt="" class="pclogo-img" />
+                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logotype-sm-dark.svg"
+                        alt="" class="-dn mlogo-img" />
+                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg"
+                        alt="" class="pclogo-img" />
                 </div>
                 <nav class="header-navcontainer df">
                     <span class="h6 swg fwb">首頁</span>
                     <span class="h6 swg fwb">甜點</span>
                     <span class="h6 swg fwb">登入</span>
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/dehaze-24px.png" alt="" class="-dn nav-dehaze">
+                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/dehaze-24px.png"
+                        alt="" class="-dn nav-dehaze">
 
                 </nav>
             </div>
-            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/shopping_cart.png" alt="" class="shopcart-img">
+            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/shopping_cart.png"
+                alt="" class="shopcart-img">
         </header>
     </div>
 
-    <div class="check-wrap df fdr fww jcsb">
+    <div class="check-wrap df fdr fww jcsa">
         <div class="diliver-contain">
             <div class="diliver-title df fdr jcsb">
                 <h1 class="h2">運送
@@ -53,15 +57,16 @@
                 <input type="tel" placeholder="0912-345-678" class="d-tel">
                 <label for="" class="d-place">地址</label>
                 <select name="'城市" id="city" class="d-city">
-                  <option value="高雄市">高雄市</option>
-                  <option value="台中市">台中市</option>
-                  <option value="台北市">台北市</option>
+                    <option value="高雄市">高雄市</option>
+                    <option value="台中市">台中市</option>
+                    <option value="台北市">台北市</option>
                 </select>
                 <select name="" id=" " class="d-road">
-          <option value="新興區">新興區</option>
-        </select>
+                    <option value="新興區">新興區</option>
+                </select>
                 <input type="text" placeholder="幸福路 520 號" class="d-side">
             </form>
+            <a href="" class="d-order">下一步</a>
         </div>
         <div class="info-contain df fdc">
             <div class="billcontainer ">
@@ -73,11 +78,14 @@
                 </div>
             </div>
             <div class="buy-list">
+                <div class="b-listtitle">
+                    購物清單
+                </div>
                 <div class="cart-contnet df fdr jcsb aic">
                     <img src="https://bit.ly/2QvsT63" alt="cake.png">
                     <div class="cart-info df fdr jcsa">
                         <div class="cartinfo-text">
-                            <h3 class="h6">焦糖馬卡龍</h3>
+                            <h3 class="h6">焦糖馬卡龍（2）</h3>
                             <h3 class="h6">NT$ 450</h3>
                         </div>
                     </div>
@@ -86,7 +94,7 @@
                     <img src="https://bit.ly/2zBDAxX" alt="cake.png">
                     <div class="cart-info df fdr jcsa">
                         <div class="cartinfo-text">
-                            <h3 class="h6">焦糖馬卡龍</h3>
+                            <h3 class="h6">焦糖馬卡龍（2）</h3>
                             <h3 class="h6">NT$ 450</h3>
                         </div>
                     </div>
@@ -95,7 +103,7 @@
                     <img src="https://bit.ly/2zKOP7w" alt="cake.png">
                     <div class="cart-info df fdr jcsa">
                         <div class="cartinfo-text">
-                            <h3 class="h6">焦糖馬卡龍</h3>
+                            <h3 class="h6">焦糖馬卡龍（2）</h3>
                             <h3 class="h6">NT$ 450</h3>
                         </div>
                     </div>
@@ -135,7 +143,8 @@
                         <input type="text" class="mail-img">
                         <a href="">
                             <div class="arrow df aic jcc">
-                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/arrow_forward-24px.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/arrow_forward-24px.png"
+                                    alt="">
                             </div>
                         </a>
                     </div>
