--- a/traingogo1/sweeshop5.html
+++ b/traingogo1/sweeshop5.html
@@ -22,17 +22,19 @@
                     <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg"
                         alt="" class="pclogo-img" />
                 </div>
-                <nav class="header-navcontainer df">
-                    <span class="h6 swg fwb">首頁</span>
-                    <span class="h6 swg fwb">甜點</span>
-                    <span class="h6 swg fwb">登入</span>
-                    <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/dehaze-24px.png"
-                        alt="" class="-dn nav-dehaze">
+                <nav class="header-navcontainer df jcsa">
+                    <a href="sweetshop1.html"><span class="h6 swg fwb">首頁</span></a>
+                    <a href="sweeshop2.html"><span class="h6 swg fwb">甜點</span></a>
+                    <a href="sweeshop3.html"><span class="h6 swg fwb">登入</span></a>
+                    <a href="sweeshop4.html" class=".nav-dehaze"><img
+                            src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/dehaze-24px.png"
+                            alt="" class="-dn"></a>
 
                 </nav>
             </div>
-            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/shopping_cart.png"
-                alt="" class="shopcart-img">
+            <a href="sweeshop4.html"><img
+                    src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/shopping_cart.png"
+                    alt="" class="shopcart-img"></a>
         </header>
     </div>
 
