--- a/traingogo1/sweeshop4.html
+++ b/traingogo1/sweeshop4.html
@@ -110,7 +110,7 @@
         <h4 class="h4 df jcsb ">總計 <span>NT$ 3,000</span> </h4>
 
       </div>
-      <a href="">
+      <a href="sweeshop5.html">
         <h4 class="h4">結帳</h4>
       </a>
     </div>
