--- a/traingogo1/sweeshop5.html
+++ b/traingogo1/sweeshop5.html
@@ -68,7 +68,7 @@
                 </select>
                 <input type="text" placeholder="幸福路 520 號" class="d-side">
             </form>
-            <a href="" class="d-order">下一步</a>
+            <a href="sweeshopcheckout2.html" class="d-order">下一步</a>
         </div>
         <div class="info-contain df fdc">
             <div class="billcontainer ">
