--- a/traingogo1/sweeshopcheckout2.html
+++ b/traingogo1/sweeshopcheckout2.html
@@ -73,7 +73,7 @@
         <label for="">背面末三碼</label>
         <input type="text" placeholder="123" class="d-side">
       </form>
-      <a href="" class="d-order">下一步</a>
+      <a href="sweeshopcheckout3-1.html" class="d-order">下一步</a>
     </div>
     <div class="info-contain df fdc">
       <div class="billcontainer ">
