--- a/traingogo1/sweeshopcheckout3-2.html
+++ b/traingogo1/sweeshopcheckout3-2.html
@@ -52,8 +52,8 @@
         </ul>
       </div>
       <div class="diliver-bill df jcc fdr">
-        <a href="">電子發票</a>
-        <a href="">郵寄發票</a>
+        <a href="sweeshopcheckout3-1.html">電子發票</a>
+        <a href="sweeshopcheckout3-2.html">郵寄發票</a>
       </div>
       <form action="" class="diliver-form">
 
@@ -75,7 +75,7 @@
         <label for="">統一編號（選填）</label>
         <input type="text" placeholder="12345678" class="d-mail">
       </form>
-      <a href="" class="d-order">下一步</a>
+      <a href="sweeshopsuccess.html" class="d-order">下一步</a>
     </div>
     <div class="info-contain df fdc">
       <div class="billcontainer ">
