--- a/traingogo1/sweeshopsuccess.html
+++ b/traingogo1/sweeshopsuccess.html
@@ -49,7 +49,7 @@
       <h1 class="h1 banner-title">付款成功</h1>
       <a href="" class="d-order">繼續逛逛</a>
     </div>
-    <a href="" class="d-order-dn ">繼續逛逛</a>
+    <a href="sweeshop2.html" class="d-order-dn ">繼續逛逛</a>
 
   </div>
 
