--- a/traingogo1/sweeshopcheckout3-1.html
+++ b/traingogo1/sweeshopcheckout3-1.html
@@ -51,8 +51,8 @@
         </ul>
       </div>
       <div class="diliver-bill df jcc fdr">
-        <a href="">電子發票</a>
-        <a href="">郵寄發票</a>
+        <a href="sweeshopcheckout3-1.html">電子發票</a>
+        <a href="sweeshopcheckout3-2.html">郵寄發票</a>
       </div>
       <form action="" class="diliver-form">
         <label for="">電子郵件信箱</label>
@@ -63,7 +63,7 @@
 
 
       </form>
-      <a href="" class="d-order">下一步</a>
+      <a href="sweeshopsuccess.html" class="d-order">下一步</a>
     </div>
     <div class="info-contain df fdc">
       <div class="billcontainer ">
