--- a/traingogo1/todolist1.html
+++ b/traingogo1/todolist1.html
@@ -40,7 +40,7 @@
           <label for=""></label>
         </ul>
         <div class="c-text df jcsb fdr aic">
-          <span>5 個待完成項目</span> <button class="cleanfinishbtn">清除已完成項目</button>
+          <span class="todonum"></span> <button class="cleanfinishbtn">清除已完成項目</button>
         </div>
       </div>
     </div>
