--- a/traingogo1/todolist1.html
+++ b/traingogo1/todolist1.html
@@ -16,7 +16,7 @@
     <div class="c-title df fdr jcsb aic">
       <img src="img/logo.svg " alt="">
       <div class="c-logoout df  fdr jcsb aic">
-        <h5 class="h5 login-name " id="login-name">代辦</h5>
+        <h5 c`~lass="h5 login-name " id="login-name">代辦</h5>
         <input type="button" value="登出" class="logooutbtn">
       </div>
 
